--- a/godsscala/pom.xml
+++ b/godsscala/pom.xml
@@ -8,7 +8,7 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.ppb.scala</groupId>
-  <artifactId>dummies</artifactId>
+  <artifactId>godsscala</artifactId>
   <version>1.0-SNAPSHOT</version>
   <inceptionYear>2008</inceptionYear>
   <properties>
